# zish_python_antlr

./: .gitignore  .travis.yml  LICENSE  README.adoc  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
test/: speed.py  test_zish.py
tests/: test_zish.py
zish/: __init__.py  _version.py  core.py
zish/antlr/: Zish.interp  ZishLexer.interp  ZishLexer.py  ZishLexer.tokens  ZishListener.py  ZishParser.py
